--- a/kcfrb.Rmd
+++ b/kcfrb.Rmd
@@ -5,6 +5,8 @@ date: "February 15, 2017"
 output: html_document
 ---
 
+this is a markdown document.
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
