--- a/kcfrb.Rmd
+++ b/kcfrb.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "kcfrb"
 author: "bk"
-date: "February 15, 2017"
+date: "`r format(Sys.Date())`"
 output: html_document
 ---
 
@@ -12,6 +12,12 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## R Markdown
+
+This is a List:
+
+1. item 1
+1. item 2
+
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
